# RayTracer

./: ArgumentsReader.h  CMakeLists.txt  Geometry.h  KdTree.cpp  KdTree.h  LightSource.cpp  LightSource.h  PhotonMap.h  Picture.cpp  Picture.h  README.md  Scene.cpp  Scene.h  lines.sh  main.cpp  render_all.sh
Geometry/: BoundingBox.cpp  BoundingBox.h  GeometricShape.h  Geometry.h  Ray.cpp  Ray.h  Vector3d.h
LightSources/: LightSource.h  PointLight.h
Objects/: Object3d.h  Parallelogram.h  PlaneQuadrangle.h  Sphere.cpp  Sphere.h  Triangle3d.cpp  Triangle3d.h
Painter/: CairoPainter.cpp  CairoPainter.h  PNGPainter.h  Painter.h
RTScenes/: lens.rt
STLScenes/: Moon.stl  cube.stl  monkey.stl  my.stl  starAndMoon.stl
SceneReader/: RTReader.h  SceneReader.h  TextSTLReader.cpp  TextSTLReader.h
SyncQueue/: Adapter.h  Optional.h  SyncQueue.h
Tests/: Tests.cpp
